fix: Back icon in cipher list was not centered

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -285,6 +285,7 @@ header:not(bit-callout header, bit-dialog header, popup-page header) {
   }
 
   .search {
+    width: 100%;
     flex-grow: 1;
     margin: 6px 0;
     display: flex;
